# FiGen

./: .clang-format  .gitignore  CMakeLists.txt  README.md  resource.qrc
inc/: NGonFigure.hpp  TableDispatcher.hpp  canvas.hpp  window.hpp
mathcore/: BaseFigure.cpp  BaseFigure.hpp  CMakeLists.txt  triangle.cpp  triangle.hpp
src/: NGonFigure.cpp  TableDispatcher.cpp  canvas.cpp  main.cpp  window.cpp
tests/: CMakeLists.txt  tst_triangle.cpp
